--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,7 @@
+- name: sleep for 120 seconds and continue with play
+  wait_for: timeout=120
+  delegate_to: localhost
+
 - name: put a deployment file
   template: src=etcd_deployment.yaml dest=/root/etcd_deployment.yaml
 
